--- a/RF_Go/Components/TVChannelsFilter.razor
+++ b/RF_Go/Components/TVChannelsFilter.razor
@@ -34,7 +34,7 @@
         </MudTable>
     </MudItem>
 
-    <MudItem xs="12" md="6" Class="table-container">
+    <MudItem xs="12" md="6" Class="table-container" Style="max-height:75vh;">
         <MudCard Elevation="0" Outlined="true" Class="border-solid border-1 mud-border-secondary">
         <MudCardHeader>
             <CardHeaderContent>
