--- a/RF_Go/Components/ScanManager.razor
+++ b/RF_Go/Components/ScanManager.razor
@@ -8,7 +8,7 @@
 @inject ScansViewModel ScansViewModel
 @inject ScanImportExportService ScanImportExportService
 
-<MudCard Elevation="0" Outlined="true" Class="border-solid border-1 mud-border-secondary">
+<MudCard Elevation="0" Outlined="true" Class="border-solid border-1 mud-border-secondary mt-1" Style="max-height: 40vh; overflow:auto">
     <MudCardHeader>
         <CardHeaderContent>
             <MudText Typo="Typo.h6">Scans</MudText>
