--- a/RF_Go/Components/Devices/DeviceTable.razor
+++ b/RF_Go/Components/Devices/DeviceTable.razor
@@ -17,6 +17,14 @@
         padding-bottom: 50px;
         text-align: right;
     }
+
+    .mobile-panel {
+        padding-left: 0 !important;
+    }
+
+    .mobile-panel .mud-expansion-panel {
+        padding-left: 0 !important;
+    }
 </style>
 
 <MudHidden Breakpoint="Breakpoint.SmAndUp" Invert="true">
@@ -89,9 +97,8 @@
             }
             else
             {
-                var uniqueModels = context.Items.Select(d => d.Model).Distinct().OrderBy(m => m);
-                var modelList = string.Join(", ", uniqueModels);
-                <MudTh Class="mud-table-cell-custom-group" colspan="3">@($"{context.Key}: {modelList}")</MudTh>
+                var device = context.Items.First();
+                <MudTh Class="mud-table-cell-custom-group" colspan="3">@($"{device.Brand} {device.Model}")</MudTh>
             }
         </GroupHeaderTemplate>
 
@@ -175,15 +182,182 @@
         </RowTemplate>
 
         <GroupFooterTemplate>
-            <MudTh Class="mud-table-cell-custom-group mud-table-cell-custom-group-footer" colspan="3">
-                Total Devices: @context.Items.Count()
-            </MudTh>
+            @if (context.GroupName != "RF Group")
+            {
+                <MudTh Class="mud-table-cell-custom-group mud-table-cell-custom-group-footer" colspan="3">
+                    Total Devices: @context.Items.Count()
+                </MudTh>
+            }
         </GroupFooterTemplate>
 
         <PagerContent>
             <MudTablePager />
         </PagerContent>
     </MudTable>
+</MudHidden>
+
+<MudHidden Breakpoint="Breakpoint.SmAndUp">
+    <div class="d-flex flex-column gap-2 pa-4">
+        <div class="d-flex justify-space-between">
+            <MudButton Variant="Variant.Filled" 
+                Color="Color.Primary" 
+                StartIcon="@Icons.Material.Filled.Add" 
+                OnClick="@(() => OnAddDevice.InvokeAsync())"
+                FullWidth="true"
+                Class="mx-1">
+                Add Device
+            </MudButton>
+            <MudButton Variant="Variant.Filled" 
+                Color="Color.Primary" 
+                StartIcon="@Icons.Material.Filled.Calculate" 
+                OnClick="@(() => OnRFCalcul.InvokeAsync())"
+                FullWidth="true"
+                Class="mx-1">
+                RF Calcul
+            </MudButton>
+        </div>
+        <div class="d-flex justify-space-between">
+            <MudButton Variant="Variant.Filled" 
+                Color="Color.Primary" 
+                StartIcon="@Icons.Material.Filled.Download" 
+                OnClick="@(() => OnImportDatabase.InvokeAsync())"
+                FullWidth="true"
+                Class="mx-1">
+                Import
+            </MudButton>
+            <MudButton Variant="Variant.Filled" 
+                Color="Color.Primary" 
+                StartIcon="@Icons.Material.Filled.Upload" 
+                OnClick="@(() => OnExportDatabase.InvokeAsync())"
+                FullWidth="true"
+                Class="mx-1">
+                Export
+            </MudButton>
+        </div>
+        <MudMenu AnchorOrigin="Origin.BottomCenter" TransformOrigin="Origin.TopCenter" 
+            StartIcon="@Icons.Material.Filled.SyncAlt" 
+            Color="Color.Primary" 
+            Variant="Variant.Filled"
+            FullWidth="true"
+            Dense="false">
+            <ActivatorContent>
+                <MudButton Variant="Variant.Filled" 
+                    Color="Color.Primary" 
+                    StartIcon="@Icons.Material.Filled.SyncAlt" 
+                    EndIcon="@Icons.Material.Filled.KeyboardArrowDown"
+                    FullWidth="true">
+                    Sync Options
+                </MudButton>
+            </ActivatorContent>
+            <ChildContent>
+                <MudMenuItem Icon="@Icons.Material.Filled.Map" 
+                    @onclick="OpenDialogOnlineDevice">
+                    Map Devices
+                </MudMenuItem>
+                <MudMenuItem Icon="@Icons.Material.Filled.AutoFixHigh" 
+                    @onclick='() => OnMagicSync.InvokeAsync("FromDevices")'>
+                    Sync From Devices
+                </MudMenuItem>
+                <MudMenuItem Icon="@Icons.Material.Filled.AutoFixHigh" 
+                    @onclick='() => OnMagicSync.InvokeAsync("ToDevices")'>
+                    Sync To Devices
+                </MudMenuItem>
+            </ChildContent>
+        </MudMenu>
+    </div>
+
+    <div class="d-flex flex-column">
+        @foreach (var group in DevicesViewModel.Devices.GroupBy(d => d.GroupID))
+        {
+            var groupName = GroupsViewModel.Groups.FirstOrDefault(g => g.ID == group.Key)?.Name ?? "Unknown Group";
+            <MudExpansionPanel Text="@groupName" HeaderClass="mud-typography-h4" Class="my-header-class mobile-panel border-solid border-2 mud-border-secondary pa-4" Dense="true">
+                @foreach (var deviceGroup in group.GroupBy(d => $"{d.Brand}_{d.Model}"))
+                {
+                    var firstDevice = deviceGroup.First();
+                    <MudExpansionPanel Text="@($"{firstDevice.Brand} {firstDevice.Model}")" Class="mobile-panel">
+                        @foreach (var device in deviceGroup)
+                        {
+                            <MudCard Class="">
+                                <MudCardContent>
+                                    <div class="d-flex flex-column gap-2">
+                                        @foreach (var channel in device.Channels)
+                                        {
+                                            <div class="d-flex align-center">
+                                                <MudTextField Typo="Typo.caption" 
+                                                    Label='@($"Channel {device.Channels.IndexOf(channel) + 1}")' 
+                                                    @bind-Value="@channel.ChannelName" 
+                                                    Class="mt-0" 
+                                                    Margin="Margin.Dense" 
+                                                    Variant="Variant.Outlined"
+                                                    @onblur="() => OnSaveDevice.InvokeAsync(device)" />
+                                            </div>
+                                            <div class="d-flex align-center">
+                                                <MudNumericField @bind-Value="channel.Frequency" 
+                                                    @bind-Value:after="() => { channel.Checked = false; StateHasChanged(); }"
+                                                    Min="@channel.Range[0]" 
+                                                    Max="@channel.Range[1]" 
+                                                    Step="@channel.Step" 
+                                                    Style="@CalculateStyle(channel)" 
+                                                    Label="@GetRange(channel)" 
+                                                    Variant="Variant.Outlined" 
+                                                    Margin="Margin.Dense" 
+                                                    FullWidth="true"
+                                                    @onblur="() => OnSaveDevice.InvokeAsync(device)" />
+                                                <MudCheckBox @bind-Value="channel.IsLocked" 
+                                                    Dense="true" 
+                                                    Color="Color.Secondary" 
+                                                    CheckedIcon="@Icons.Material.Filled.Lock" 
+                                                    UncheckedIcon="@Icons.Material.Filled.LockOpen" 
+                                                    Class="pl-3" />
+                                                <MudIconButton Icon="@Icons.Material.Filled.Backup" 
+                                                    Color="Color.Info" 
+                                                    Size="Size.Small" 
+                                                    OnClick="() => OpenBackupFrequencyModal(device, channel)"
+                                                    Class="pl-3" />
+                                            </div>
+                                        }
+                                        <div class="d-flex justify-space-between align-center mt-2">
+                                            <MudSelect T="int" Value="device.GroupID" 
+                                                ValueChanged="(newGroupId) => GroupsViewModel.UpdateDeviceGroupAsync(device, newGroupId)">
+                                                @foreach (var g in GroupsViewModel.Groups)
+                                                {
+                                                    <MudSelectItem Value="@g.ID">@g.Name</MudSelectItem>
+                                                }
+                                            </MudSelect>
+                                            <div class="d-flex">
+                                                @if (device.IsSynced)
+                                                {
+                                                    <MudIconButton Icon="@Icons.Material.Filled.Link" 
+                                                        @onclick="() => OnDesyncDevice.InvokeAsync(device)" 
+                                                        aria-label="desync" />
+                                                }
+                                                <MudIconButton Icon="@Icons.Material.Filled.Delete" 
+                                                    @onclick="() => OnDeleteDevice.InvokeAsync(device)" 
+                                                    aria-label="delete" />
+                                            </div>
+                                        </div>
+                                        <div class="d-flex justify-space-between align-center">
+                                            <MudTextField Typo="Typo.caption" Style="margin:0;" 
+                                                @bind-Value="@device.IpAddress" 
+                                                Placeholder="IP Address" 
+                                                @onblur="() => OnSaveDevice.InvokeAsync(device)" 
+                                                Class="custom-textfield" />
+                                            <MudIconButton @onclick="() => OnOpenQuickSync.InvokeAsync(device)" 
+                                                Icon="@GetSyncIcon(device)" 
+                                                Color="@GetSyncColor(device)" />
+                                        </div>
+                                    </div>
+                                </MudCardContent>
+                            </MudCard>
+                        }
+                        <div class="text-right pa-2">
+                            Total Devices: @deviceGroup.Count()
+                        </div>
+                    </MudExpansionPanel>
+                }
+            </MudExpansionPanel>
+        }
+    </div>
 </MudHidden>
 
 @code {
@@ -217,9 +391,9 @@
         Selector = (device) => device.GroupID.ToString(),
         InnerGroup = new TableGroupDefinition<RFDevice>()
         {
-            GroupName = "Brand",
+            GroupName = "Model",
             Expandable = true,
-            Selector = (device) => device.Brand
+            Selector = (device) => $"{device.Brand}_{device.Model}"
         }
     };
 
