--- a/RF_Go/wwwroot/css/app.css
+++ b/RF_Go/wwwroot/css/app.css
@@ -120,3 +120,10 @@ a, .btn-link {
         z-index: 9999;
     }
 }
+
+@media (max-width: 600px) {
+    .mud-expand-panel-content.mud-expand-panel-gutters {
+      padding-left: 0 !important;
+      padding-right: 0 !important;
+    }
+  }
